--- a/static/scss/layout/_footer.scss
+++ b/static/scss/layout/_footer.scss
@@ -24,7 +24,7 @@
         grid-template-columns: 1fr 1fr;
         background-color: white;
         padding: 0;
-        width: 37.5em;
+        width: 35.5em;
         position: absolute;
         z-index: 2;
         top: 4em;
@@ -34,10 +34,10 @@
         // height: 10em;
     }
     @media #{$breakpoint-lg}{
-        width: 42em;
+        width: 36em;
     }
     @media #{$breakpoint-xl}{
-        width: 42em;
+        width: 39em;
     }
     @media #{$breakpoint-xxl}{
         width: 33em;
@@ -284,16 +284,9 @@ footer{
     position: relative;
     background-color: $gray;
     text-align: center;
-    @media #{$breakpoint-md}{
-        height: 14em;
+    @media #{$breakpoint-min-md}{
+        height: 100%;;
     }
-    @media #{$breakpoint-lg},#{$breakpoint-xl}{
-        height: 14em;
-    }
-    @media #{$breakpoint-xxl}{
-        height: 100%;
-    }
-
 }
 
 .ig-intro-content{
