--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8688,6 +8688,11 @@ input[type='checkbox'] {
   margin: 5em 0;
 }
 
+.faq-item:nth-of-type(8) {
+  margin: 5em 0 0 0;
+  padding-bottom: 5em;
+}
+
 @media only screen and (min-width: 768px) {
   .faq-item {
     margin: 1em .5em;
