--- a/static/scss/layout/_footer.scss
+++ b/static/scss/layout/_footer.scss
@@ -95,8 +95,11 @@ footer{
     background-color: $light-pink;
     text-align: center;
     @media #{$breakpoint-min-md}{
-        height: 1.5em;
+        height: 2.5em;
         background-color: $gray;
+    }
+    @media #{$breakpoint-lg}{
+        height: 3em;
     }
 }   
 
