--- a/static/scss/pages/_services.scss
+++ b/static/scss/pages/_services.scss
@@ -293,7 +293,7 @@
 
     }
     @media #{$breakpoint-lg}{
-        margin: 1em 0;
+        margin: 0 0;
     }
     @media #{$breakpoint-min-md}{
         background-color: white;
