--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4276,7 +4276,7 @@ input[type='checkbox'] {
 }
 
 .about-detail-title {
-  width: 14.4em;
+  width: 18em;
   font-weight: 400;
 }
 
@@ -4314,7 +4314,7 @@ input[type='checkbox'] {
 }
 
 .about-detail-subtitle {
-  margin: 0.7em;
+  margin: 1.2em;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -7325,7 +7325,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .services-intro {
-    margin: 1em 0;
+    margin: 0 0;
   }
 }
 
