--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8638,9 +8638,11 @@ input[type='checkbox'] {
   margin: 5em 0;
 }
 
-.faq-item:nth-of-type(8) {
-  margin: 5em 0 0 0;
-  padding-bottom: 5em;
+@media only screen and (max-width: 500px) {
+  .faq-item:nth-of-type(8) {
+    margin: 5em 0 0 0;
+    padding-bottom: 5em;
+  }
 }
 
 @media only screen and (min-width: 768px) {
