--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -451,6 +451,11 @@
 .quote-parallax-container{
     position: relative;
     height: 19em;
+    background-image: url("../img/Mhairi_pics/chair-circus-lane-comp.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     @media #{$breakpoint-xl} {
         height: 14em;
     }
