--- a/static/scss/layout/_footer.scss
+++ b/static/scss/layout/_footer.scss
@@ -111,6 +111,8 @@ footer{
     height: 7em;
     text-align: center;
     position: relative;
+    z-index: 5;
+    background: white;
 }
 
 .to-top-text{
