--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -1120,14 +1120,17 @@
 .services-cta{
     position: relative;
     height: 25em;
-    background-image: url("../img/Mhairi_pics/patio_sitting_comp.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
     // margin: 4em 0 0 0;
     @media #{$breakpoint-sm} {
         height: 22em;
+    }
+    @media #{$breakpoint-min-md} {
+        z-index: -1;
+        background-image: url("../img/Mhairi_pics/patio_sitting_comp.jpg");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
     }
     @media #{$breakpoint-md} {
         height: 16em;
@@ -1147,18 +1150,29 @@
         -o-object-fit: cover;
         object-fit: cover;
         object-position: 50% 55%;
-        opacity: .5;
     }
 }
 
-.parallax-container{
-    height: 100%;
-    background: black;
-    opacity: 0.3;
-    @media #{$breakpoint-min-md} {
-        opacity: 0.7;
+.services-cta{
+    @media #{$breakpoint-xs}, #{$breakpoint-sm} {
+        .parallax-container{
+            z-index: -1;
+            bottom: 0em;
+            width: 100%;
+            min-height: 100%;
+            position: fixed;
+            background-image: url("../img/Mhairi_pics/patio_sitting_comp.jpg");
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            @media #{$breakpoint-min-md} {
+                opacity: 0.7;
+            }
+        }
     }
 }
+
 
 .services-parallax-window{
     min-height: 100%;
