--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -451,11 +451,14 @@
 .quote-parallax-container{
     position: relative;
     height: 19em;
-    background-image: url("../img/Mhairi_pics/chair-circus-lane-comp.jpg");
+    background-image: url("../img/Mhairi_pics/chair-circus-lane-comp.jpg");    
     background-position: center;
-    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-size: cover;
+    z-index: 5;
+    @media #{$breakpoint-min-md} {
+        background-position: 0 -2em;
+    }
     @media #{$breakpoint-xl} {
         height: 14em;
     }
