--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -1120,6 +1120,10 @@
 .services-cta{
     position: relative;
     height: 25em;
+    background-image: url("../img/Mhairi_pics/patio_sitting_comp.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     // margin: 4em 0 0 0;
     @media #{$breakpoint-sm} {
         height: 22em;
@@ -1153,26 +1157,11 @@
     }
 }
 
-.services-cta{
-    @media #{$breakpoint-xs}, #{$breakpoint-sm} {
-        .parallax-container{
-            z-index: -1;
-            bottom: 0em;
-            width: 100%;
-            min-height: 100%;
-            position: fixed;
-            background-image: url("../img/Mhairi_pics/patio_sitting_comp.jpg");
-            background-position: center;
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            @media #{$breakpoint-min-md} {
-                opacity: 0.7;
-            }
-        }
-    }
+.parallax-container{
+    background-color: black;
+    height: 100%;
+    opacity: .6;
 }
-
 
 .services-parallax-window{
     min-height: 100%;
