--- a/static/scss/pages/_contact.scss
+++ b/static/scss/pages/_contact.scss
@@ -4,12 +4,7 @@
 
 .contact-hero-container{
     position: relative;
-}
-
-.contact-hero-parallax-window{
     min-height: 33em;
-    background: transparent;
-    position: relative;
     text-align: center;
     @media #{$breakpoint-sm}{
         min-height: 34em;
@@ -23,6 +18,17 @@
     @media #{$breakpoint-xl}{
         min-height: 19.5em;
     }
+    @media #{$breakpoint-min-md}{
+        background-image: url("../img/Mhairi_pics/typing-comp.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+}
+
+.contact-hero-parallax-window{
+    background: black;
 }
 
 .contact-hero-parallax-window:before{
