--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -767,6 +767,16 @@
     @media #{$breakpoint-xxl}{
         height: 14em;
     }
+    .parallax-container{
+        @media #{$breakpoint-min-md}{
+            background-image: url("../img/Mhairi_pics/chair-circus-lane-crop.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+        }
+       
+    }
    
     img{
         height: 150%;
