--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -180,26 +180,32 @@
 
     @media #{$breakpoint-sm}{
         grid-template-columns: 50vw;
-        height: 135em;
+        height: 132em;
         padding-bottom: 3em;
     }
+    @media #{$breakpoint-min-md}{
+        padding: 0;
+    }
     
-    @media #{$breakpoint-min-md} {
+    @media #{$breakpoint-md} {
         grid-template-columns: 2fr [coaching-1-1] minmax(auto, 12em) 2em [coaching-free] minmax(auto, 12em) 2em [coaching-why] minmax(auto, 12em) 2fr; 
-        height: 39em;
-        margin: 0 0 0 0;
+        height: 32em;
+        margin: 4em 0;
     }
     @media #{$breakpoint-lg}{
-        height: 35em;
+        grid-template-columns: 2fr [coaching-1-1] minmax(auto, 12em) 2em [coaching-free] minmax(auto, 12em) 2em [coaching-why] minmax(auto, 12em) 2fr; 
+        height: 28em;
+        margin: 4em 0;
     }
     @media #{$breakpoint-xl} {
         grid-template-columns: auto [coaching-1-1] minmax(auto, 11em) 2em [coaching-free] minmax(auto, 11em) 2em [coaching-why] minmax(auto, 11em) auto;
-        height: 31em;
+        height: 24em;
+        margin: 4em 0;
     }  
     @media #{$breakpoint-xxl} {
         grid-template-columns: auto [coaching-1-1] minmax(auto, 11em) 2em [coaching-free] minmax(auto, 11em) 2em [coaching-why] minmax(auto, 11em) auto;
-        margin: 1em 0 0 0;
-        height: 31em;
+        margin: 4em 0;
+        height: 23em;
     } 
 }
 
@@ -251,15 +257,19 @@
     }
     @media #{$breakpoint-md}{
         grid-template-rows: 14em 17.5em;
+        margin: 0;
     }
     @media #{$breakpoint-lg} {
         grid-template-rows: 13em 15em;
+        margin: 0;
     }
     @media #{$breakpoint-xl} {
         grid-template-rows: 11em 13em;
+        margin: 0;
     }
     @media #{$breakpoint-xxl} {
         grid-template-rows: 12em 11em;
+        margin: 0;
     }
 }
 
@@ -328,6 +338,7 @@
     @media #{$breakpoint-min-md} {
         background-color: white;
         height: 36.5em;
+        padding-bottom: 0;
         grid-template-columns: 4em 15em repeat(2, 1fr) 4em;
         grid-template-rows:repeat(3, 1fr);
         .home-about-title{
@@ -362,7 +373,7 @@
     }
     @media #{$breakpoint-xl}, #{$breakpoint-xxl} {
         grid-template-columns:  auto 13em repeat(2, 13em) auto;
-        margin-top: 4em;
+        margin: 4em 0;
         height: 25em;
     }
     @media #{$breakpoint-xxl} {
